[package]
name = "soroban-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = "fat"

[profile.release-with-logs]
inherits = "release"
debug = true
